--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tandem-sandbox",
+  "name": "whatsapp-chat-sentiment",
   "private": true,
   "version": "0.0.0",
   "type": "module",
